# mail-server

./: Cargo.toml  Dockerfile  README.md  config.toml  install.sh
docs/: README.md  configuration.md  installation.md
scripts/: compile-test.sh
src/: config.rs  error.rs  main.rs  tls.rs
src/api/: admin.rs  auth.rs  domains.rs  mailboxes.rs  messages.rs  middleware.rs  mod.rs  users.rs
src/auth/: mod.rs  password.rs  rate_limit.rs  security.rs  session.rs  totp.rs
src/domain/: mod.rs
src/protocols/: imap.rs  mod.rs  pop3.rs  smtp.rs
src/storage/: database.rs  email_parser.rs  mailbox.rs  mod.rs
