[package]
name = "rust-mail-server"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A multi-protocol mail server supporting IMAP, SMTP, and POP3"

[dependencies]
# Async runtime
tokio = { version = "1.0", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }

# HTTP API framework
axum = { version = "0.7", features = ["macros"] }
tower = { version = "0.4", features = ["util"] }
tower-http = { version = "0.5", features = ["fs", "trace", "cors"] }

# JWT and authentication
jsonwebtoken = "9.2"
lazy_static = "1.4"

# Networking and TLS
tokio-rustls = "0.24"
rustls = "0.21"
rustls-pemfile = "1.0"

# Serialization and configuration
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Database
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "chrono", "uuid"] }
uuid = { version = "1.0", features = ["v4", "serde"] }

# Cryptography and authentication
argon2 = "0.5"
rand = "0.8"
base64 = "0.21"
base32 = "0.4"
hmac = "0.12"
sha1 = "0.10"
sha2 = "0.10"

# Email parsing and handling
mail-parser = "0.8"
mail-builder = "0.3"

# HTTP client for PowerDNS API
reqwest = { version = "0.11", features = ["json"] }

# Logging and error handling
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
anyhow = "1.0"
thiserror = "1.0"

# Time handling
chrono = { version = "0.4", features = ["serde"] }

# Compression for email storage
flate2 = "1.0"

# Additional utilities
bytes = "1.0"
futures = "0.3"
async-trait = "0.1"
urlencoding = "2.1"

# Rate limiting and security
governor = "0.6"
dashmap = "5.5"

# Configuration validation
validator = { version = "0.16", features = ["derive"] }

# Metrics and monitoring
prometheus = "0.13"
